Fixes issue with cropped texts that had negative lineSpacing

--- a/static/styles/main.styl
+++ b/static/styles/main.styl
@@ -3,7 +3,7 @@ html
   height: 100%
   margin: 0px
   padding: 0px
-
+  overflow hidden
 
 body
   height: inherit
@@ -15,3 +15,17 @@ body
 
 canvas
   border 1px solid black
+
+[class^="preload-"]
+  position absolute
+  top -1000px
+  left -1000px
+
+.preload-erica-one
+  font-family 'Erica One'
+
+.preload-chango
+  font-family 'Chango'
+
+.preload-ubuntu-mono
+  font-family 'Ubuntu Mono'
